tiny alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,7 +137,6 @@ hr.haar-header {
   height: 1.5vw;
   width: 5.5vw;
   border-radius: 1.5vw;
-  margin-left: 40vw;
 }
 
 hr.haar-fijn-5 {
